<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kikisnight.marsquiz.MainActivity"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/text_mars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/mars"
                    android:textAllCaps="true"
                    android:textColor="@color/textIcons"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/mars"
                    android:layout_marginBottom="120dp"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="230dp"
            android:layout_alignParentTop="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bold_text"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/question_text"
                    android:text="@string/question_text_1"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/option_1_1"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_1" />

                    <RadioButton
                        android:id="@+id/option_1_2"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_2" />

                    <RadioButton
                        android:id="@+id/option_1_3"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_3" />

                    <RadioButton
                        android:id="@+id/option_1_4"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_option_4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bold_text"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question_2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/question_text"
                    android:text="@string/question_text_2"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/option_2_1"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_option_1" />

                    <RadioButton
                        android:id="@+id/option_2_2"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_option_2" />

                    <RadioButton
                        android:id="@+id/option_2_3"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_option_3" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bold_text"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question_3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/question_text"
                    android:text="@string/question_text_3"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/option_3_1"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_3_option_1" />

                    <RadioButton
                        android:id="@+id/option_3_2"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_3_option_2" />

                    <RadioButton
                        android:id="@+id/option_3_3"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_3_option_3" />

                    <RadioButton
                        android:id="@+id/option_3_4"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_3_option_4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bold_text"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question_4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/question_text"
                    android:text="@string/question_text_4"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/option_4_1"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_option_1" />

                    <RadioButton
                        android:id="@+id/option_4_2"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_option_2" />

                    <RadioButton
                        android:id="@+id/option_4_3"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_option_3" />

                    <RadioButton
                        android:id="@+id/option_4_4"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_option_4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bold_text"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question_5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/question_text"
                    android:text="@string/question_text_5"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/option_5_1"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5_option_1" />

                    <RadioButton
                        android:id="@+id/option_5_2"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5_option_2" />

                    <RadioButton
                        android:id="@+id/option_5_3"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5_option_3" />

                    <RadioButton
                        android:id="@+id/option_5_4"
                        style="@style/option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5_option_4" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bold_text"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question_6"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/question_text"
                    android:text="@string/question_text_6"/>

                <EditText
                    android:id="@+id/questionSixText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_6_option_1"
                    android:inputType="textCapSentences"
                    android:textColorHint="@color/secondaryText"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bold_text"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/question_7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/question_text"
                    android:text="@string/question_text_7"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkAnswer1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/option_text"
                            android:text="@string/question_7_option_1"/>

                        <CheckBox
                            android:id="@+id/checkAnswer2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/option_text"
                            android:text="@string/question_7_option_2"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkAnswer3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/option_text"
                            android:text="@string/question_7_option_3"/>

                        <CheckBox
                            android:id="@+id/checkAnswer4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/option_text"
                            android:text="@string/question_7_option_4"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitAnswers"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="36dp"
                android:text="@string/button_result"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
